I decided not to make it a new command-line option.  (We already
have plenty.)

****** COMPATIBILITY CHANGE ********
Changed the following command names to avoid conflicts:
	rview -> rvu (with symbolic link back to rview)
	calc -> icalc
	lam -> rlam
	gencat -> gencatenary

Improved -f option of normpat, which caused odd color changes before.

Created pgblur script which does fast Gaussian blur of image without changing
its dimensions.  This is very useful in certain types of image processing
calculations, such as finding or removing low frequencies.

****** COMPATIBILITY CHANGE ********
Changed little-used objpict script so that it takes scene files rather than
rpict options on the command line, and puts everything into the right
coordinate position automatically rather than requiring the user to do it.

Added -I option to replmarks for mesh instancing.

Made similar change for virtual sources to allow modifiers and aliases
on the mirror and prism types to work properly.

Rob Guglielmetti dded -lw and -lh options to falsecolor to control the
legend dimensions.  Made it so -lw 0 and/or -lh 0 turns legend off.

Made it so pcompos will read everything from a stream even if it doesn't
need it, so input commands will not receive a hangup signal.

Wrote ra_bmp program to convert to and from Windows BMP files (finally).
It's the most horrible image format I've ever seen, and I've seen a lot.

Increased -aa default value for all renderers (and also -ad and -as in
rview) at Schorsch's suggestion.  I think this undid my earlier decrease
of -aa last time, which I guess was ill-considered.

Modified oconv to keep subdividing the octree if there are too many
objects in a voxel even when the -r resolution limit has been
reached.  This was not done before due to problems with recursion,
and still, it will only continue to 256 times the original -r limit.
If that isn't enough, then there's probably no hope, anyway.